PREAPPS-7010: Changed variable values to addess WCAG contrast issues

--- a/css-variables.css
+++ b/css-variables.css
@@ -15,7 +15,7 @@
 	--gray-light: #999999;
 	--gray-lighter: #d9d9d9;
 	--gray-lightest: #f2f2f2;
-	--gray-placeholder: var(--gray-light);
+	--gray-placeholder: var(--gray-dark);
 	--warm-gray: var(--gray-light);
 	--off-white: #fafafa;
 	--translucent-white: rgba(255, 255, 255, 0.7);
@@ -31,14 +31,14 @@
 	--text-color-light: #ffffff;
 	--dialog-title-fg: #000000;
 	--background-gray: var(--gray-lightest);
-	--link-color: var(--brand-primary-500);
-	--link-hover-color: var(--brand-primary-800);
+	--link-color: var(--brand-primary-700);
+	--link-hover-color: var(--brand-primary-900);
 	--link-hover-decoration: underline;
 	--item-hover-bg: #ffffff;
 	--item-selected-bg: var(--brand-primary-100);
 	--border-color: var(--gray-lighter);
 	--hr-border: var(--gray-lighter);
-	--placeholder-color: var(--gray-light);
+	--placeholder-color: var(--gray-dark);
 	--app-menu-active-color: var(--gray-lightest);
 	--list-active-bg: var(--brand-primary-50);
 	--list-hover-bg: var(--gray-lightest);
